[SC-3168] - added background-clip: padding-box style to the data table to avoid conflict between table-collapse: collapse and td position: relative in mozilla and edge

--- a/src/app/cfo/cashflow/cashflow.component.less
+++ b/src/app/cfo/cashflow/cashflow.component.less
@@ -814,6 +814,7 @@
                             letter-spacing: 0.2px;
                             line-height: 23px;
                             padding-left: 26px;
+                            background-clip: padding-box !important;
                             position: relative;
 
                             &[class*="next"] {
